2008-03-01  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Bug 16954: Support putImageData

        Nice simple testcase for putImageData covering the exciting 
        little bits of behaviour present in the current spec.

        * fast/canvas/canvas-putImageData-expected.txt: Added.
        * fast/canvas/canvas-putImageData.html: Added.

2008-03-01  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin Adler.

        Update test result.

        * fast/dom/Window/window-function-name-getter-precedence-expected.txt:

2008-03-01  Nikolas Zimmermann  <zimmermann@kde.org>

        Reviewed by Oliver.

        Add new set of dynamic updates tests, this time for SVGForeignObjectElement.

        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-height-attr-expected.checksum: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-height-attr-expected.png: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-width-attr-expected.checksum: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-width-attr-expected.png: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-x-attr-expected.checksum: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-x-attr-expected.png: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-y-attr-expected.checksum: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-dom-y-attr-expected.png: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-svgdom-height-prop-expected.checksum: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-svgdom-height-prop-expected.png: Added.
        * platform/mac-leopard/svg/dynamic-updates/SVGForeignObjectElement-svgdom-width-prop-expected.checksum: Added.