@@ -1,3 +1,12 @@
+2008-03-02  Kevin Ollivier  <kevino@theolliviers.com>
+
+        Reviewed by Dave Hyatt.
+
+        Gracefully handle a CSS rule containing an invalid value.
+        (Fixes http://bugs.webkit.org/show_bug.cgi?id=16898)
+
+        * css/CSSGrammar.y:
+
 2008-03-02  Alp Toker  <alp@atoker.com>
 
         Reviewed by Mark Rowe.
